@@ -1,6 +1,16 @@
-Wed Jul 13 14:29:26 2005  Loic Dachary  <loic@gnu.org>
+ven jui 15 10:03:05 2005  Thierry Delamare  <thy@mekensleep.com>
 
 	* Release 1.0.4
+
+	* pokerui/pokerrenderer.py (PokerRenderer.__init__): show or not
+	show next and previous label depending on start count and
+	total. make count settable via poker2d-test.xml.
+
+	* pokerclient2d/hand_history.c (handle_hand_history): 
+	* pokerclient2d/poker2d.xml.in: 
+	* conf/poker.client.xml.in: 
+
+Wed Jul 13 14:29:26 2005  Loic Dachary  <loic@gnu.org>
 
 	* pokerui/pokerrenderer.py (PokerRenderer.changeState): reset state to IDLE
 	  when switching to CANCELED state only if in PAY_BLIND state
